# flet-charts

./: .docstr.yaml  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  appveyor.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  release.yml
bar_chart/: index.html
bar_chart_group/: index.html
bar_chart_rod/: index.html
bar_chart_rod_stack_item/: index.html
changelog/: index.html
chart_axis/: index.html
chart_axis_label/: index.html
charts/: index.html
docs/: bar_chart.md  bar_chart_group.md  bar_chart_rod.md  bar_chart_rod_stack_item.md  chart_axis.md  chart_axis_label.md  charts.md  index.md  line_chart.md  line_chart_data.md  line_chart_data_point.md  matplotlib_chart.md  pie_chart.md  pie_chart_section.md  plotly_chart.md  scatter_chart.md  scatter_chart_spot.md
docs/extras/css/: mkdocstrings.css
docs/extras/macros/: __init__.py
docs/types/: bar_chart_event.md  bar_chart_rod_tooltip.md  bar_chart_tooltip.md  bar_chart_tooltip_direction.md  chart_circle_point.md  chart_cross_point.md  chart_data_point_tooltip.md  chart_event_type.md  chart_grid_lines.md  chart_horizontal_alignment.md  chart_point_line.md  chart_point_shape.md  chart_square_point.md  horizontal_alignment.md  line_chart_data_point_tooltip.md  line_chart_event.md  line_chart_event_spot.md  line_chart_tooltip.md  pie_chart_event.md  scatter_chart_event.md  scatter_chart_spot_tooltip.md  scatter_chart_tooltip.md
examples/charts_example/: pyproject.toml
examples/charts_example/src/bar_chart/: example_1.py  example_2.py
examples/charts_example/src/line_chart/: example_1.py  example_2.py
examples/charts_example/src/matplotlib_chart/: example_1.py  example_2.py
examples/charts_example/src/pie_chart/: example_1.py  example_2.py
examples/charts_example/src/plotly_chart/: example_1.py  example_2.py  example_3.py  example_4.py
examples/charts_example/src/scatter_chart/: example_1.py
license/: index.html
line_chart/: index.html
line_chart_data/: index.html
line_chart_data_point/: index.html
matplotlib_chart/: index.html
pie_chart/: index.html
pie_chart_section/: index.html
plotly_chart/: index.html
scatter_chart/: index.html
scatter_chart_spot/: index.html
search/: search_index.json
src/flet_charts/: __init__.py  bar_chart.py  bar_chart_group.py  bar_chart_rod.py  bar_chart_rod_stack_item.py  chart_axis.py  line_chart.py  line_chart_data.py  line_chart_data_point.py  matplotlib_chart.py  matplotlib_chart_with_toolbar.py  pie_chart.py  pie_chart_section.py  plotly_chart.py  scatter_chart.py  scatter_chart_spot.py  types.py
src/flutter/flet_charts/: README.md  pubspec.yaml
templates/python/material/: attribute.html.jinja  class.html.jinja  summary.html.jinja
tests/: mpl_v2_3d.py  mpl_v2_animate.py  mpl_v2_basic.py  mpl_v2_events.py  pyproject.toml
types/bar_chart_event/: index.html
types/bar_chart_rod_tooltip/: index.html
types/bar_chart_tooltip/: index.html
types/bar_chart_tooltip_direction/: index.html
types/chart_circle_point/: index.html
types/chart_cross_point/: index.html
types/chart_data_point_tooltip/: index.html
types/chart_event_type/: index.html
types/chart_grid_lines/: index.html
types/chart_horizontal_alignment/: index.html
types/chart_point_line/: index.html
types/chart_point_shape/: index.html
types/chart_square_point/: index.html
types/horizontal_alignment/: index.html
types/line_chart_data_point_tooltip/: index.html
types/line_chart_event/: index.html
types/line_chart_event_spot/: index.html
types/line_chart_tooltip/: index.html
types/pie_chart_event/: index.html
types/scatter_chart_event/: index.html
types/scatter_chart_spot_tooltip/: index.html
types/scatter_chart_tooltip/: index.html
(+11 files in other folders)
